rustainers/src/container/snapshots/rustainers__container__state__tests__should_serde_inspect_status.snap
---
source: rustainers/src/container/state.rs
expression: result
---
ContainerState {
    status: Running,
    health: ContainerFullStateHealth {
        status: Starting,
        failing_streak: 0,
        log: None,
    },
}
