rustainers/src/container/snapshots/rustainers__container__state__tests__should_serde_inspect_status_exited.snap
---
source: rustainers/src/container/state.rs
expression: result
---
ContainerState {
    status: Exited,
    health: ContainerFullStateHealth {
        status: Unknown,
        failing_streak: 0,
        log: None,
    },
}
